<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.android.quizapp.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/name_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Name"
            android:inputType="textCapWords"
            android:textSize="16sp"
            android:background="#E5E4E2"
            android:textColor="#E91E63"
            android:layout_marginBottom="16dp"/>

        <TextView
            style="@style/QuestionTextStyle"
            android:text="@string/q1" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/q1a"
                android:text="@string/q1a"
                style="@style/RadioButtonTextStyle"/>
            <RadioButton
                android:id="@+id/q1b"
                android:text="@string/q1b"
                style="@style/RadioButtonTextStyle" />
            <RadioButton
                android:id="@+id/q1c"
                android:text="@string/q1c"
                style="@style/RadioButtonTextStyle" />
            <RadioButton
                android:id="@+id/q1d"
                android:text="@string/q1d"
                style="@style/RadioButtonTextStyle"/>
        </RadioGroup>



        <TextView
            style="@style/QuestionTextStyle"
            android:layout_marginTop="16dp"
            android:text="@string/q2"
            android:layout_marginBottom="16sp"/>

        <CheckBox
            android:id="@+id/q2a"
            android:text="@string/q2a"
            style="@style/CheckBoxTextStyle"/>

        <CheckBox
            android:id="@+id/q2b"
            android:text="@string/q2b"
            style="@style/CheckBoxTextStyle"/>

        <CheckBox
            android:id="@+id/q2c"
            android:text="@string/q2c"
            style="@style/CheckBoxTextStyle"/>

        <CheckBox
            android:id="@+id/q2d"
            android:text="@string/q2d"
            style="@style/CheckBoxTextStyle"/>

        <TextView
            style="@style/QuestionTextStyle"
            android:layout_marginTop="0dp"
            android:text="@string/q3" />
        <EditText
            android:id="@+id/q3a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="16 Bit"
            android:background="#E5E4E2"
            android:inputType="textCapWords"
            android:textSize="16sp"
            android:textColor="#E91E63"
            android:layout_marginLeft="20dp" />

        <TextView
            style="@style/QuestionTextStyle"
            android:text="@string/q4"
            android:layout_marginTop="16dp"
            android:layout_height="32dp"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/q4a"
                android:text="@string/q4a"
                style="@style/RadioButtonTextStyle"/>
            <RadioButton
                android:id="@+id/q4b"
                android:text="@string/q4b"
                style="@style/RadioButtonTextStyle"/>
        </RadioGroup>

        <TextView
            style="@style/QuestionTextStyle"
            android:text="@string/q5" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/q5a"
                android:text="@string/q5a"
                style="@style/RadioButtonTextStyle"/>
            <RadioButton
                android:id="@+id/q5b"
                android:text="@string/q5b"
                style="@style/RadioButtonTextStyle"/>
            <RadioButton
                android:id="@+id/q5c"
                android:text="@string/q5c"
                style="@style/RadioButtonTextStyle" />
            <RadioButton
                android:id="@+id/q5d"
                android:text="@string/q5d"
                style="@style/RadioButtonTextStyle" />
        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Submit Quiz"
            android:onClick="submitQuiz"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>

    </LinearLayout>

</ScrollView>
